[tool.poetry]
name = "safety vest "
version = "0.1.0"
description = ""
authors = ["Willinton Munoz <wilintonmunoz09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
ultralytics = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
